--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <h1>welcome.</h1></header>
 
 <ul><li>info</li>
-            <ul><li>a (nearly) no-CSS, fast, minimalist Hugo theme ported from <a href='https://github.com/riggraz/no-style-please'>riggraz/no-style-please</a>.</li><li><a href="https://github.com/riggraz/no-style-please">github repo</a></li><li>used by <a href='https://riggraz.dev'>riggraz.dev</a> and <a href='https://github.com/riggraz/no-style-please/network/dependents'>many others</a></li></ul>
+            <ul><li><a href="https://github.com/riggraz/no-style-please">github repo</a></li><li>used by <a href='https://riggraz.dev'>riggraz.dev</a> and <a href='https://github.com/riggraz/no-style-please/network/dependents'>many others</a></li></ul>
 <li>all posts</li>
         
     
