added link to my github repo

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <h1>welcome.</h1></header>
 
 <ul><li>info</li>
-            <ul><li><a href="https://github.com/riggraz/no-style-please">github repo</a></li></ul>
+            <ul><li><a href="https://github.com/riggraz/no-style-please">github repo</a></li><li>built with HUGO, Netlify, and Github</li></ul>
 <li>all posts</li>
         
     
