--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,10 @@
         
     
     <ul><li>
+            <span>2023-05-16</span>
+            <a href="/posts/boredom/">VarietiesofBoredom.md</a>
+        </li>
+        <li>
             <span>2023-05-14</span>
             <a href="/posts/first-post/">First Post</a>
         </li>
@@ -41,6 +45,10 @@
 
 <li>posts by category</li>
     <ul><li>
+            <span>2023-05-16</span>
+            <a href="/posts/boredom/">VarietiesofBoredom.md</a>
+        </li>
+        <li>
             <span>2023-05-14</span>
             <a href="/posts/first-post/">First Post</a>
         </li>
