created post for i don't wanna live on the moon harmonic tab

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <h1>so glad you could make it</h1></header>
 
 <ul><li>info</li>
-            <ul><li><a href="https://github.com/edurkee/quickstart">github repo</a></li><li>Powered by HUGO, Netlify, Github, and a team of six reindeer</li></ul>
+            <ul><li><a href="/youcangetelliot@gmail.com">contact me: youcangetelliot@gmail.com</a></li><li>Powered by HUGO, Netlify, Github, and a team of six reindeer</li><li><a href="https://github.com/edurkee/quickstart">github repo</a></li></ul>
 <li>all posts</li>
         
     
