--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,10 @@
         
     
     <ul><li>
+            <span>2023-06-20</span>
+            <a href="/posts/en-route-to-taipei/">pirate&#39;s log 1: en-route</a>
+        </li>
+        <li>
             <span>2023-06-08</span>
             <a href="/posts/i-dont-want-to-live-on-the-moon-tab/">I Don&#39;t Want to Live on the Moon, Harmonica Tab</a>
         </li>
@@ -41,6 +45,10 @@
 
 <li>posts by category</li>
     <ul><li>
+            <span>2023-06-20</span>
+            <a href="/posts/en-route-to-taipei/">pirate&#39;s log 1: en-route</a>
+        </li>
+        <li>
             <span>2023-06-08</span>
             <a href="/posts/i-dont-want-to-live-on-the-moon-tab/">I Don&#39;t Want to Live on the Moon, Harmonica Tab</a>
         </li>
