--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,10 @@
         
     
     <ul><li>
+            <span>2023-06-22</span>
+            <a href="/posts/firstday/">Good morning from Taipei</a>
+        </li>
+        <li>
             <span>2023-06-20</span>
             <a href="/posts/en-route-to-taipei/">pirate&#39;s log 1: en-route</a>
         </li>
@@ -41,6 +45,10 @@
 
 <li>posts by category</li>
     <ul><li>
+            <span>2023-06-22</span>
+            <a href="/posts/firstday/">Good morning from Taipei</a>
+        </li>
+        <li>
             <span>2023-06-20</span>
             <a href="/posts/en-route-to-taipei/">pirate&#39;s log 1: en-route</a>
         </li>
