--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,10 @@
         
     
     <ul><li>
+            <span>2023-06-30</span>
+            <a href="/posts/languagegoals/">Language Goals</a>
+        </li>
+        <li>
             <span>2023-06-24</span>
             <a href="/posts/june22-24/">June 22-24</a>
         </li>
@@ -49,6 +53,10 @@
 
 <li>posts by category</li>
     <ul><li>
+            <span>2023-06-30</span>
+            <a href="/posts/languagegoals/">Language Goals</a>
+        </li>
+        <li>
             <span>2023-06-24</span>
             <a href="/posts/june22-24/">June 22-24</a>
         </li>
