--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,10 @@
         
     
     <ul><li>
+            <span>2023-07-03</span>
+            <a href="/posts/specificallypacific/">Specifically Pacific</a>
+        </li>
+        <li>
             <span>2023-06-30</span>
             <a href="/posts/languagegoals/">Language Goals</a>
         </li>
@@ -53,6 +57,10 @@
 
 <li>posts by category</li>
     <ul><li>
+            <span>2023-07-03</span>
+            <a href="/posts/specificallypacific/">Specifically Pacific</a>
+        </li>
+        <li>
             <span>2023-06-30</span>
             <a href="/posts/languagegoals/">Language Goals</a>
         </li>
