rearranged menu.toml, created photo_album as a post and linked it to the menu as a category (even though its not)

--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
     </ul>
 
 <li>post categories</li>
-            <ul><li><a href="/elliotdurkee.com/posts/taiwanblog/">taiwan blog</a></li></ul>
+            <ul><li><a href="/posts/taiwanblog/">taiwan blog</a></li></ul>
 </ul>
 
 
