--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
 <ul><li>info</li>
             <ul><li><a href="/youcangetelliot@gmail.com">contact me: youcangetelliot@gmail.com</a></li><li>currently not reachable by my regular phone number. reach the same number on Whatsapp.</li><li>Powered by HUGO, Netlify, Github, and a team of six reindeer</li><li><a href="https://github.com/edurkee/quickstart">github repo</a></li></ul>
 <li>content categories</li>
-            <ul><li><a href="/posts/taiwanblog/">taiwan blog</a></li><li><a href="/posts/photo_album/">photo album</a></li></ul>
+            <ul><li><a href="/archives/taiwanblog/">taiwan blog through archives folder (for testing purposes)</a></li><li><a href="/posts/taiwanblog/">taiwan blog redirect through posts folder</a></li><li><a href="/posts/photo_album/">photo album</a></li></ul>
 <li>all posts</li>
         
     
