trying to put ad at the bottom

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
 
 <header>
     <h1>going on an adventure!</h1></header>
+<p><img src="/images1/americano.png" alt="sponsorship1"></p>
 
 <ul><li>info</li>
             <ul><li><a href="/youcangetelliot@gmail.com">contact me: youcangetelliot@gmail.com</a></li><li>currently not reachable by my regular phone number. reach the same number on Whatsapp.</li><li>Powered by HUGO, Netlify, Github, and a team of six reindeer</li><li><a href="https://github.com/edurkee/quickstart">github repo</a></li></ul>
