--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <h1>going on an adventure!</h1></header>
 
 <ul><li>info</li>
-            <ul><li><a href="/youcangetelliot@gmail.com">contact me: youcangetelliot@gmail.com</a></li><li>currently not reachable by my regular phone number. reach the same number on Whatsapp.</li><li>Powered by HUGO, Netlify, Github, and a team of six reindeer</li><li><a href="https://github.com/edurkee/quickstart">github repo</a></li></ul>
+            <ul><li><a href="/youcangetelliot@gmail.com">contact me: youcangetelliot@gmail.com</a></li><li>Powered by HUGO, Netlify, Github, and a team of six reindeer</li><li><a href="https://github.com/edurkee/quickstart">github repo</a></li></ul>
 <li>content categories</li>
             <ul><li><a href="/archives/taiwanblog/">taiwan blog through archives folder (for testing purposes)</a></li><li><a href="/posts/taiwanblog/">taiwan blog (through posts folder)</a></li><li><a href="/posts/photo_album/">photo album</a></li><li><a href="/posts/myfavoriteveggierecipies/">veggie recipies</a></li></ul>
 <li>things I'm thinking about</li>
