added show_description to config.toml within nostyleplease

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 
   <title>
     
-      going on an adventure!
+      Harvests:
     
   </title>
 
@@ -25,7 +25,7 @@
             <div class="w">
 
 <header>
-    <h1>going on an adventure!</h1></header>
+    <h1>Harvests:</h1></header>
 
 <ul><li>info</li>
             <ul><li><a href="/youcangetelliot@gmail.com">contact me: youcangetelliot@gmail.com</a></li><li>Powered by HUGO, Netlify, Github, and a team of six reindeer</li><li><a href="https://github.com/edurkee/quickstart">github repo</a></li></ul>
