--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 
   <title>
     
-      Harvests:
+      a little bit of everything
     
   </title>
 
@@ -25,7 +25,7 @@
             <div class="w">
 
 <header>
-    <h1>Harvests:</h1><p></p>
+    <h1>a little bit of everything</h1><p></p>
         <p id="output"></p></header>
 
 <body>
