trying photos some more

--- a/public/index.html
+++ b/public/index.html
@@ -50,14 +50,8 @@
 		"chase shiny things",
 		"Almost everything will work again if you unplug it for a few minutes, including you. - Anne Lammott",
 		"Rest is productive.",
-		"Enjoy the journey.",
-		"If you ain't growin', you're dyin'. - Farmers, if i had to guess.",
-		"Angels fly because they take themselves lightly. - GK Chesterton",
-		"Duck!",	  		
-		"Creativity stems from disruption.",
-		"Action is the antidote to despair.",
-		"Sometimes a change is as good as a rest.",
-		"Dance!"
+		"Enjoy the journey."
+  		
 		];
 
 	
