added quotes to index.html that somehow go wiped before?

--- a/public/index.html
+++ b/public/index.html
@@ -50,8 +50,15 @@
 		"chase shiny things",
 		"Almost everything will work again if you unplug it for a few minutes, including you. - Anne Lammott",
 		"Rest is productive.",
-		"Enjoy the journey."
-  		
+		"Enjoy the journey.",
+		"Dance!",
+		"The Angels fly because they take themselves lightly. - GK Chesterton",
+		"If you're not growing, you're dying. - Farmers, I would assume",
+		"duck!",
+		"Sometimes you have to burn your ships.",
+		"Creativity stems from disruption.",
+		"Action is the antidote to despair."
+			  		
 		];
 
 	
