--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
          
 	const quotes = [
   		"The only way to do great work is to love what you do. - Steve Jobs",
- 		 "In the middle of every difficulty lies opportunity. - Albert Einstein",
+ 		"In the middle of every difficulty lies opportunity. - Albert Einstein",
   		"The future belongs to those who believe in the beauty of their dreams. - Eleanor Roosevelt",
   		"The best way to predict the future is to invent it. - Alan Kay",
       		"How we spend our days is, of course, how we spend our lives - Annie Dillard",
@@ -67,7 +67,8 @@
 		"Just passing through.",
 		"Create your own culture.",
 		"Just passing through.",
-		"We do not see things as they are, we see them as we are. - Anais Nin"	
+		"We do not see things as they are, we see them as we are. - Anais Nin",
+
 		];
 
 	
