needs another commit

--- a/public/index.html
+++ b/public/index.html
@@ -37,10 +37,6 @@
 
          
 	const quotes = [
-  		"The only way to do great work is to love what you do. - Steve Jobs",
- 		"In the middle of every difficulty lies opportunity. - Albert Einstein",
-  		"The future belongs to those who believe in the beauty of their dreams. - Eleanor Roosevelt",
-  		"The best way to predict the future is to invent it. - Alan Kay",
       		"How we spend our days is, of course, how we spend our lives - Annie Dillard",
 		"I had thought that beauty was just something to behold; I didn't know it was something you could do. - Toni Morrison",
 		"To live is the rarest thing in the world. Most people just exist, that's all. - Oscar Wilde",
@@ -50,8 +46,8 @@
 		"chase shiny things",
 		"Almost everything will work again if you unplug it for a few minutes, including you. - Anne Lammott",
 		"Rest is productive.",
-		"Enjoy the journey."
-  		"The Angels fly because they take themselves lightly. - GK Chesterton",
+		"Enjoy the journey.",
+		"The Angels fly because they take themselves lightly. - GK Chesterton",
 		"Dance!",
 		"Duck!",
 		"Action is the answer.",
@@ -67,8 +63,8 @@
 		"Just passing through.",
 		"Create your own culture.",
 		"Just passing through.",
-		"We do not see things as they are, we see them as we are. - Anais Nin",
-
+		"We do not see things as they are, we see them as we are. - Anais Nin",	
+  		
 		];
 
 	
