changes to layous/partials

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,25 @@
 <body a="light">
         <main class="page-content" aria-label="Content">
             <div class="w">
+<head>
+    
+
+    <style>
+    body {
+        background: url('/Users/elliot/quickstart/static/background.png') no-repeat center center fixed;
+        background-size: cover;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+    }
+
+    .content {
+        position: relative;
+        z-index: 10;  
+        color: white;  
+    }
+    </style>
+</head>
 
 <header>
     <h1>a little bit of everything</h1><p></p>
